refactor: streamlined calc. of terraf. vals in Achievements.ConfigDialog